<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('career_course_descriptions', function (Blueprint $table) {
            $table->id();
            $table->foreignId('course_id')->unique()->constrained('career_courses')->cascadeOnDelete();
            $table->text('description_text');
            $table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('career_course_descriptions');
    }
};
